Bug 1928798 - do not return fatal error if the initialization failed, try again with another state machine. r=jrmuizel, a=RyanVM

It's possible that the initialization failure is caused by the user's
device not supporting the media engine pipeline. In this case, we
should attempt to use another state machine for playback instead of
simply returning an error.

Differential Revision: https://phabricator.services.mozilla.com/D227773